2010-01-07  Tobias Burnus  <burnus@net-b.de>

PR fortran/42597
        * trans-decl.c (get_proc_pointer_decl): Fix call to
        gfc_conv_initializer for array-valued proc-pointer funcs.

2010-01-07  Tobias Burnus  <burnus@net-b.de>

        PR fortran/42597
        * gfortran.dg/proc_ptr_26.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155688 138bc75d-0d04-0410-961f-82ee72b054a4